# booking-tools

./: .gitignore  CLAUDE.md  pyproject.toml
research/: domain1_property_catalog_schema.md  simulation.md  tools_proposal.md
sessions/: book-mcp.md
src/property_catalog_mcp/: __main__.py  data.py  models.py  server.py
src/property_catalog_mcp/mock_data/: properties.json
src/property_catalog_mcp/tools/: get_property_details.py  search_properties.py
tests/: conftest.py  test_data.py  test_get_property_details.py  test_models.py  test_search_properties.py  test_server.py
